# tdlas_mapping

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  package.xml
data/: measurement_log1  measurement_log1_postProcessed  measurement_log2_postProcessed  pass1  pass2
include/: PoseJSON.hpp  Utils.hpp
include/json/: PoseJSON.hpp  Utils.hpp
include/tdlas_mapping/: Logging.hpp  MapGenerator.hpp  PID.h  common.h  generate_map.h  reactive_follower.h  reactive_master.h
launch/: generateMap.py  generateSimMap.py  main.py  paintTrajectory.py  recordMeasurements.py  trajectory.rviz
launch/giraff/: giraff.py
launch/rhodon/: rhodon.py
launch/simulation/: debug.xml  main_simulation_launch.py  robot2023.rviz  single_robot_nav.py  tdlas_test.py
maps/: parking.pgm
maps/Exp_C/: coppeliaScene.ttt  occupancy.pgm
maps/Mapirlab/: mapirlab.pgm  occupancy.yaml
src/: MapGenerator.cpp  clock_server.cpp  generate_map.cpp  log_measurements.cpp  mapFromSimulations.cpp  paint_trajectory.cpp  reactive.cpp  reactive_follower.cpp  reactive_master.cpp  test.cpp
